--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,14 +1,27 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="hk.valenta.lgpiesupport"
-    android:versionCode="6"
-    android:versionName="1.2.1" >
+    android:versionCode="8"
+    android:versionName="1.3.0" >
 
     <uses-sdk android:minSdkVersion="19" android:targetSdkVersion="19" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name" 
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme" >
+
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>        
         
         <meta-data android:name="xposedmodule" android:value="true" />
         <meta-data android:name="xposedminversion" android:value="2.5*"/>
